ISSUE:  Resizable jqxEditor  PURPOSE: Fit the height when the tools wrap with css.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1880,13 +1880,13 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
 th {
 	font-weight: 500;
 }
-/*.jqx-editor-content {
+.jqx-editor-content {
 	resize: vertical;
 	overflow: hidden;
 	padding: 10px;
-	height: 150px;
+	height: 223px;
 	width: auto;
-}*/
+}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
